# plyrical

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
src/plyrical/: checks.py  plyrical.py  scanner.py  utils.py
src/providers/: kugou.py  musixmatch.py
