[metadata]
name = plyrical
description = A tool for downloading lrc time-synced lyrics
long_description = file: README.md
long_description_content_type = text/markdown
author = Mike Contolini
author_email = mikecontolini@gmail.com
maintainer = Mike Contolini
maintainer_email = mikecontolini@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = infoblox
project_urls =

[options]
package_dir =
    =src
packages = find:
install_requires =
    click-config-file
    enlighten
    mutagen
    requests
    rich-click
python_requires = >=3.8

[options.extras_require]
testing =
    black~=22.3
    flaky~=3.7
    flake8~=4.0
    flake8-black~=0.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plyrical = plyrical.plyrical:cli

[pycodestyle]
max_line_length = 88
ignore = E203,E226,E24,W503

[flake8]
max-line-length = 88
extend-ignore =
    E203,
